--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -6,5 +6,5 @@ jobs:
     steps:
       - name: checkout code
         uses:  actions/checkout@v4
-      - name: Read-file
+      - name: Read-File
         run: cat hello.txt
