--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -5,6 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout code
-        uses:  actions/checkout@v2
-      - name: Read-File
-        run: cat hello.txt
+        uses: actions/checkout@v2  # Use the latest stable version
+      - name: Read File
+        run: cat ./hello.txt  # Ensure the file path is correct
